# streamlit-chunk-file-uploader

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-publish.yml
docker/: Dockerfile  docker-compose.yaml  nginx.conf
docker/app/: main.py
docker/app/.streamlit/: config.toml
streamlit_chunk_file_uploader/: __init__.py  _models.py  _utils.py
streamlit_chunk_file_uploader/frontend/: package-lock.json  package.json
streamlit_chunk_file_uploader/frontend/src/: FileUploader.tsx  file_uploader.css  index.tsx
