[metadata]
name = streamlit-chunk-file-uploader
dynamic = ["version"]
author = Ryuya Matsumoto
author_email = public@ryuya-matsumoto.com
description = Custom component to perform chunked upload in Streamlit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GracefulTabby/streamlit-chunk-file-uploader
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    streamlit >= 1.26.0

[options.extras_require]
devel =
    wheel
    pytest==7.4.0
    playwright==1.39.0
    requests==2.31.0
    pytest-playwright-snapshot==1.0
    pytest-rerunfailures==12.0
